--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Portfolio description" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/path/to/logo192.png" />
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
     <title>Professional Portfolio React </title>
   </head>
   <body>
